--- a/index.html
+++ b/index.html
@@ -1,9 +1,35 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
-	<title></title>
-	<link rel="stylesheet" type="text/css" href="styles.css">
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<script src="https://kit.fontawesome.com/3689467a52.js" crossorigin="anonymous"></script>
+  	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap">
+	  <link rel="stylesheet" href="/styles.css">
+	<title>Reservia</title>
 </head>
 <body>
-	<h1> un super titre ???? </h1>
+	<div class="corps">
+		<!--cette balise va contenir ma navigation et ma section recherche-->
+		<header>
+			<nav>
+
+			</nav>
+			<section class="recherche">
+
+				
+			</section>	
+		</header>
+
+		<!--cette balise va contenir mes hotels-->
+		<main>
+
+		</main>
+
+	</div>
+	<footer>
+
+	</footer>
 </body>
 </html>
