modification css header

--- a/Reservia.html
+++ b/Reservia.html
@@ -32,7 +32,7 @@
 				<p>En plein centre ville ou en pleine nature</p>
 				<form class="formulaire" action="#">
 					<i class="fas fa-map-marker-alt"></i>
-					<input class="link-input" type="text" placeholder="Marseille, France">
+					<input type="text" placeholder="Marseille, France">
 					<button type="button">Rechercher</button>
 				</form>
 				<div class="filtres">
@@ -51,7 +51,7 @@
 							<span> Romantique</span>
 						</button>
 						<button class="link-filtre" type="button">
-							<i class="fas fa-heart"></i>
+							<i class="fas fa-dog"></i>
 							<span>Animaux autorisés </span>
 						</button>
 					</div>
@@ -69,8 +69,8 @@
 				<section class="hebergements-marseille">
 					<h2>Hébergements à Marseille</h2>
 					<div class="hebergements-marseille-cartes">
-						<a class="hebergement-marseille-item" href="#">
 
+						<a class="hebergements-marseille-item" href="#">
 							<img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
 								alt="auberge la cannebiere" />
 							<div class="hebergements-marseille-contenu">
@@ -85,45 +85,83 @@
 								</div>
 							</div>
 						</a>
-						<a class="hotel-port" href="#">
+
+						<a class="hebergements-marseille-item" href="#">
 							<img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
 								alt="hotel du port">
-							<h3>Hôtel du port </h3>
-							<p>Nuit à partir de 52€</p>
-							<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star">
-							</i><i class="fas fa-star"></i><i class="fas fa-star"></i><br>
+
+							<div class="hebergements-marseille-contenu">
+								<h3>Hôtel du port </h3>
+								<p>Nuit à partir de 52€</p>
+								<div class="notation">
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+								</div>
+							</div>
 						</a>
-						<a class="hotel-mouettes" href="#">
+
+						<a class="hebergements-marseille-item" href="#">
 							<img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
 								alt="hotel les mouettes">
-							<h3>Hôtel Les mouettes</h3>
-							<p>Nuit à partir de 76€</p>
-							<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star">
-							</i><i class="fas fa-star"></i><i class="far fa-star"></i><br>
+							<div class="hebergements-marseille-contenu">
+								<h3>Hôtel Les mouettes</h3>
+								<p>Nuit à partir de 76€</p>
+								<div class="notation">
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+									<i class="far fa-star"></i>
+								</div>
+							</div>
 						</a>
-						<a class="hotel-mer" href="#">
+						<a class="hebergements-marseille-item" href="#">
 							<img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
 								alt="hotel la mer">
-							<h3>Hôtel de la mer</h3>
-							<p>Nuit à partir de 46€</p>
-							<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star">
-							</i><i class="far fa-star"></i><i class="far fa-star"></i><br>
+							<div class="hebergements-marseille-contenu">
+								<h3>Hôtel de la mer</h3>
+								<p>Nuit à partir de 46€</p>
+								<div class="notation">
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+									<i class="far fa-star"></i>
+									<i class="far fa-star"></i>
+								</div>
+							</div>
 						</a>
-						<a class="auberge-panier" href="#">
+						<a class="hebergements-marseille-item" href="#">
 							<img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
 								alt="auberge le panier">
-							<h3>Auberge le Panier</h3>
-							<p>Nuit à partir de <strong>23€</strong></p>
-							<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star">
-							</i><i class="fas fa-star"></i><i class="far fa-star"></i><br>
+							<div class="hebergements-marseille-contenu">
+								<h3>Auberge le Panier</h3>
+								<p>Nuit à partir de <strong>23€</strong></p>
+								<div class="notation">
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+									<i class="far fa-star"></i>
+								</div>
+							</div>
 						</a>
-						<a class="hotel-amina" href="#"><img
-								src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
+						<a class="hebergements-marseille-item" href="#">
+							<img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
 								alt="hotel amina">
-							<h3>Hôtel chez Amina</h3>
-							<p>Nuit à partir de 96€</p>
-							<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star">
-							</i><i class="fas fa-star"></i><i class="fas fa-star"></i><br>
+							<div class="hebergements-marseille-contenu">
+								<h3>Hôtel chez Amina</h3>
+								<p>Nuit à partir de 96€</p>
+								<div class="notation">
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+								</div>
+							</div>
 						</a>
 					</div>
 					<button class="afficher" type="button"> Afficher plus </button>
@@ -132,29 +170,50 @@
 				<aside class="populaires">
 					<h2>Les plus populaires</h2>
 					<i class="fas fa-chart-line"></i><br>
-					<a class="soleil-matin" href="#">
+					<a class="populaires_item" href="#">
 						<img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
 							alt="soleil du matin">
-						<h3>Hôtel Le soleil du matin</h3>
-						<p>Nuit à partir de 128€</p>
-						<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star">
-						</i><i class="fas fa-star"></i><i class="fas fa-star"></i><br>
+						<div class="populaires-contenu">
+							<h3>Hôtel Le soleil du matin</h3>
+							<p>Nuit à partir de 128€</p>
+							<div class="notation">
+								<i class="fas fa-star"></i>
+								<i class="fas fa-star"></i>
+								<i class="fas fa-star"></i>
+								<i class="fas fa-star"></i>
+								<i class="fas fa-star"></i>
+							</div>
+						</div>
 					</a>
-					<a class="coeur-eau" href="#">
+					<a class="populaires_item" href="#">
 						<img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
 							alt="coeur de l'eau chambres">
-						<h3>Au coeur de l'eau Chambres d'hôtes</h3>
-						<p>Nuit à partir de 71€</p>
-						<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star">
-						</i><i class="fas fa-star"></i><i class="far fa-star"></i><br>
+						<div class="populaires-contenu">
+							<h3>Au coeur de l'eau Chambres d'hôtes</h3>
+							<p>Nuit à partir de 71€</p>
+							<div class="notation">
+								<i class="fas fa-star"></i>
+								<i class="fas fa-star"></i>
+								<i class="fas fa-star"></i>
+								<i class="fas fa-star"></i>
+								<i class="far fa-star"></i>
+							</div>
+						</div>
 					</a>
-					<a class="bleu-blanc" href="#">
+					<a class="populaires_item" href="#">
 						<img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
 							alt="hotel bleu et blanc">
-						<h3>Hôtel Tout bleu et Blanc</h3>
-						<P>Nuit à partir de 68€</P>
-						<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star">
-						</i><i class="fas fa-star"></i><i class="far fa-star"></i><br>
+						<div class="populaires-contenu">
+							<h3>Hôtel Tout bleu et Blanc</h3>
+							<P>Nuit à partir de 68€</P>
+							<div class="notation">
+								<i class="fas fa-star"></i>
+								<i class="fas fa-star"></i>
+								<i class="fas fa-star"></i>
+								<i class="fas fa-star"></i>
+								<i class="far fa-star"></i>
+							</div>
+						</div>
 					</a>
 				</aside>
 			</div>
@@ -206,21 +265,19 @@
 					<li><a href="">Données et confidentialité</a></li>
 				</ul>
 			</div>
-			<div class="a-propos">
+			<div class="nos-hebergements">
 				<h3> Nos hébergements</h3>
 				<ul>
 					<li><a href="">Charte qualité</a></li>
 					<li><a href="">Soumettre votre hôtel</a></li>
-
 				</ul>
 			</div>
-			<div class="a-propos">
+			<div class="assistance">
 				<h3>Assistance</h3>
 				<ul>
 					<li><a href="">Centre d'aide</a></li>
 					<li><a href="">Nous contacter</a></li>
 				</ul>
-
 			</div>
 		</footer>
 	</div>
