modification css main

--- a/Reservia.html
+++ b/Reservia.html
@@ -22,7 +22,7 @@
 				</a>
 				<ul>
 					<li><a class="hebergements" href="#hebergements-a-marseille"> Hébergements </a></li>
-					<li><a class="activites" href="#activites-a-marseille"> Activités</a></li>
+					<li><a class="activites" href="#activites-a-marseille">Activités</a></li>
 					<li><a class="subscribe" href="#"><strong>S'inscrire</strong></a></li>
 				</ul>
 			</nav>
@@ -67,9 +67,8 @@
 		<main>
 			<div class="les-hotels">
 				<section class="hebergements-marseille">
-					<h2>Hébergements à Marseille</h2>
+					<h2 id="hebergements-a-marseille">Hébergements à Marseille</h2>
 					<div class="hebergements-marseille-cartes">
-
 						<a class="hebergements-marseille-item" href="#">
 							<img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
 								alt="auberge la cannebiere" />
@@ -81,7 +80,9 @@
 									<i class="fas fa-star"></i>
 									<i class="fas fa-star"></i>
 									<i class="fas fa-star"></i>
-									<i class="far fa-star"></i>
+									<div class="link-notation">
+										<i class="fas fa-star"></i>
+									</div>
 								</div>
 							</div>
 						</a>
@@ -114,7 +115,9 @@
 									<i class="fas fa-star"></i>
 									<i class="fas fa-star"></i>
 									<i class="fas fa-star"></i>
-									<i class="far fa-star"></i>
+									<div class="link-notation">
+										<i class="fas fa-star"></i>
+									</div>
 								</div>
 							</div>
 						</a>
@@ -128,8 +131,10 @@
 									<i class="fas fa-star"></i>
 									<i class="fas fa-star"></i>
 									<i class="fas fa-star"></i>
-									<i class="far fa-star"></i>
-									<i class="far fa-star"></i>
+									<div class="link-notation">
+										<i class="fas fa-star"></i>
+										<i class="fas fa-star"></i>
+									</div>
 								</div>
 							</div>
 						</a>
@@ -144,7 +149,9 @@
 									<i class="fas fa-star"></i>
 									<i class="fas fa-star"></i>
 									<i class="fas fa-star"></i>
-									<i class="far fa-star"></i>
+									<div class="link-notation">
+										<i class="fas fa-star"></i>
+									</div>
 								</div>
 							</div>
 						</a>
@@ -196,7 +203,7 @@
 								<i class="fas fa-star"></i>
 								<i class="fas fa-star"></i>
 								<i class="fas fa-star"></i>
-								<i class="far fa-star"></i>
+								<i class="fas fa-star"></i>
 							</div>
 						</div>
 					</a>
@@ -211,7 +218,7 @@
 								<i class="fas fa-star"></i>
 								<i class="fas fa-star"></i>
 								<i class="fas fa-star"></i>
-								<i class="far fa-star"></i>
+								<i class="fas fa-star"></i>
 							</div>
 						</div>
 					</a>
@@ -219,7 +226,7 @@
 			</div>
 
 			<section class="activites-marseille">
-				<h2>Activités à Marseille</h2>
+				<h2 id="activites-a-marseille">Activités à Marseille</h2>
 				<div class="activites-marseille-cartes">
 					<a class="activites-marseille-item" href="#">
 						<img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="vieux port">
@@ -250,9 +257,6 @@
 					</a>
 				</div>
 			</section>
-
-
-
 		</main>
 
 
