--- a/Reservia.html
+++ b/Reservia.html
@@ -93,7 +93,7 @@
 
 							<div class="hebergements-marseille-contenu">
 								<h3>Hôtel du port </h3>
-								<p>Nuit à partir de 52€</p>
+								<p>Nuit à partir de 52<strong>€</strong></p>
 								<div class="notation">
 									<i class="fas fa-star"></i>
 									<i class="fas fa-star"></i>
@@ -109,7 +109,7 @@
 								alt="hotel les mouettes">
 							<div class="hebergements-marseille-contenu">
 								<h3>Hôtel Les mouettes</h3>
-								<p>Nuit à partir de 76€</p>
+								<p>Nuit à partir de 76<strong>€</strong></p>
 								<div class="notation">
 									<i class="fas fa-star"></i>
 									<i class="fas fa-star"></i>
@@ -126,7 +126,7 @@
 								alt="hotel la mer">
 							<div class="hebergements-marseille-contenu">
 								<h3>Hôtel de la mer</h3>
-								<p>Nuit à partir de 46€</p>
+								<p>Nuit à partir de 46<strong>€</strong></p>
 								<div class="notation">
 									<i class="fas fa-star"></i>
 									<i class="fas fa-star"></i>
@@ -160,7 +160,7 @@
 								alt="hotel amina">
 							<div class="hebergements-marseille-contenu">
 								<h3>Hôtel chez Amina</h3>
-								<p>Nuit à partir de 96€</p>
+								<p>Nuit à partir de 96<strong>€</strong></p>
 								<div class="notation">
 									<i class="fas fa-star"></i>
 									<i class="fas fa-star"></i>
@@ -175,14 +175,16 @@
 				</section>
 
 				<aside class="populaires">
-					<h2>Les plus populaires</h2>
-					<i class="fas fa-chart-line"></i><br>
-					<a class="populaires_item" href="#">
+					<div class="link-populaires">
+						<h2>Les plus populaires</h2>
+						<i class="fas fa-chart-line"></i>
+					</div>
+					<a class="populaires-item" href="#">
 						<img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
 							alt="soleil du matin">
 						<div class="populaires-contenu">
 							<h3>Hôtel Le soleil du matin</h3>
-							<p>Nuit à partir de 128€</p>
+							<p>Nuit à partir de 128<strong>€</strong></p>
 							<div class="notation">
 								<i class="fas fa-star"></i>
 								<i class="fas fa-star"></i>
@@ -192,33 +194,37 @@
 							</div>
 						</div>
 					</a>
-					<a class="populaires_item" href="#">
+					<a class="populaires-item" href="#">
 						<img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
 							alt="coeur de l'eau chambres">
 						<div class="populaires-contenu">
 							<h3>Au coeur de l'eau Chambres d'hôtes</h3>
-							<p>Nuit à partir de 71€</p>
+							<p>Nuit à partir de 71<strong>€</strong></p>
 							<div class="notation">
 								<i class="fas fa-star"></i>
 								<i class="fas fa-star"></i>
 								<i class="fas fa-star"></i>
 								<i class="fas fa-star"></i>
-								<i class="fas fa-star"></i>
+								<div class="link-notation">
+									<i class="fas fa-star"></i>
+								</div>
 							</div>
 						</div>
 					</a>
-					<a class="populaires_item" href="#">
+					<a class="populaires-item" href="#">
 						<img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
 							alt="hotel bleu et blanc">
 						<div class="populaires-contenu">
 							<h3>Hôtel Tout bleu et Blanc</h3>
-							<P>Nuit à partir de 68€</P>
+							<P>Nuit à partir de 68<strong>€</strong></P>
 							<div class="notation">
 								<i class="fas fa-star"></i>
 								<i class="fas fa-star"></i>
 								<i class="fas fa-star"></i>
 								<i class="fas fa-star"></i>
-								<i class="fas fa-star"></i>
+								<div class="link-notation">
+									<i class="fas fa-star"></i>
+								</div>
 							</div>
 						</div>
 					</a>
