--- a/Reservia.html
+++ b/Reservia.html
@@ -21,15 +21,17 @@
 					<img src="images/logo/Reservia.svg" alt="logo-reservia" />
 				</a>
 				<ul>
-					<li><a class="hebergements" href="#hebergements-a-marseille"> Hébergements </a></li>
-					<li><a class="activites" href="#activites-a-marseille">Activités</a></li>
+					<li><a class="link-nav" href="#hebergements-a-marseille"> Hébergements </a></li>
+					<li><a class="link-nav" href="#activites-a-marseille">Activités</a></li>
 					<li><a class="subscribe" href="#"><strong>S'inscrire</strong></a></li>
 				</ul>
 			</nav>
 
 			<section class="recherche">
-				<h1>Trouvez votre hébergement pour des vaccances de rêve</h1>
-				<p>En plein centre ville ou en pleine nature</p>
+				<div class="link-recherche">
+					<h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+					<p>En plein centre ville ou en pleine nature</p>
+				</div>
 				<form class="formulaire" action="#">
 					<i class="fas fa-map-marker-alt"></i>
 					<input type="text" placeholder="Marseille, France">
@@ -58,7 +60,7 @@
 				</div>
 				<div class="info">
 					<i class="fas fa-info"></i>
-					<p> Plus de 500 logements sont disponbles sur cette ville</p>
+					<p> Plus de 500 logements sont disponbles dans cette ville</p>
 				</div>
 			</section>
 		</header>
@@ -179,55 +181,58 @@
 						<h2>Les plus populaires</h2>
 						<i class="fas fa-chart-line"></i>
 					</div>
-					<a class="populaires-item" href="#">
-						<img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
-							alt="soleil du matin">
-						<div class="populaires-contenu">
-							<h3>Hôtel Le soleil du matin</h3>
-							<p>Nuit à partir de 128<strong>€</strong></p>
-							<div class="notation">
-								<i class="fas fa-star"></i>
-								<i class="fas fa-star"></i>
-								<i class="fas fa-star"></i>
-								<i class="fas fa-star"></i>
-								<i class="fas fa-star"></i>
-							</div>
-						</div>
-					</a>
-					<a class="populaires-item" href="#">
-						<img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
-							alt="coeur de l'eau chambres">
-						<div class="populaires-contenu">
-							<h3>Au coeur de l'eau Chambres d'hôtes</h3>
-							<p>Nuit à partir de 71<strong>€</strong></p>
-							<div class="notation">
-								<i class="fas fa-star"></i>
-								<i class="fas fa-star"></i>
-								<i class="fas fa-star"></i>
-								<i class="fas fa-star"></i>
-								<div class="link-notation">
+					<div class="populaires-cartes">
+						<a class="populaires-item" href="#">
+							<img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
+								alt="soleil du matin">
+							<div class="populaires-contenu">
+								<h3>Hôtel Le soleil du matin</h3>
+								<p>Nuit à partir de 128<strong>€</strong></p>
+								<div class="notation">
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
 									<i class="fas fa-star"></i>
 								</div>
 							</div>
-						</div>
-					</a>
-					<a class="populaires-item" href="#">
-						<img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
-							alt="hotel bleu et blanc">
-						<div class="populaires-contenu">
-							<h3>Hôtel Tout bleu et Blanc</h3>
-							<P>Nuit à partir de 68<strong>€</strong></P>
-							<div class="notation">
-								<i class="fas fa-star"></i>
-								<i class="fas fa-star"></i>
-								<i class="fas fa-star"></i>
-								<i class="fas fa-star"></i>
-								<div class="link-notation">
+						</a>
+						<a class="populaires-item" href="#">
+							<img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
+								alt="coeur de l'eau chambres">
+							<div class="populaires-contenu">
+								<h3>Au coeur de l'eau Chambres d'hôtes</h3>
+								<p>Nuit à partir de 71<strong>€</strong></p>
+								<div class="notation">
 									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+									<div class="link-notation">
+										<i class="fas fa-star"></i>
+									</div>
 								</div>
 							</div>
-						</div>
-					</a>
+						</a>
+						<a class="populaires-item" href="#">
+							<img id="link-img"
+								src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
+								alt="hotel bleu et blanc">
+							<div class="populaires-contenu">
+								<h3>Hôtel Tout bleu et Blanc</h3>
+								<P>Nuit à partir de 68<strong>€</strong></P>
+								<div class="notation">
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+									<div class="link-notation">
+										<i class="fas fa-star"></i>
+									</div>
+								</div>
+							</div>
+						</a>
+					</div>
 				</aside>
 			</div>
 
@@ -238,29 +243,40 @@
 						<img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="vieux port">
 						<h3>Vieux port</h3>
 					</a>
-					<a class="activites-marseille-item" href="#">
-						<img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
-							alt="fort de pomegues">
-						<h3>Fort de Pomègues</h3>
-					</a>
-					<a class="activites-marseille-item" href="#">
-						<img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="iles du frioul">
-						<h3>Îles du Frioul</h3>
-					</a>
+					<div class="pomegues-frioul">
+						<a class="activites-marseille-pomegues" href="#">
+							<img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
+								alt="fort de pomegues">
+							<h3>Fort de Pomègues</h3>
+						</a>
+
+						<a class="activites-marseille-frioul" href="#">
+							<img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
+								alt="iles du frioul">
+							<h3>Îles du Frioul</h3>
+						</a>
+					</div>
+
+
 					<a class="activites-marseille-item" href="#"><img
 							src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
 							alt="parc des calanques">
 						<h3>Parc National des Calanques</h3>
 					</a>
-					<a class="activites-marseille-item" href="#">
-						<img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg"
-							alt="dame de la garde">
-						<h3>Notre-Dame-de-la-Garde</h3>
-					</a>
-					<a class="activites-marseille-item" href="#">
-						<img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="parc longchamp">
-						<h3>Parc Longchamp</h3>
-					</a>
+
+					<div class="activites-marseille-link">
+						<a class="activites-marseille-style" href="#">
+							<img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg"
+								alt="dame de la garde">
+							<h3>Notre-Dame-de-la-Garde</h3>
+						</a>
+						<a class="activites-marseille-style" href="#">
+							<img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
+								alt="parc longchamp">
+							<h3>Parc Longchamp</h3>
+						</a>
+					</div>
+
 				</div>
 			</section>
 		</main>
