modification css grid

--- a/Reservia.html
+++ b/Reservia.html
@@ -60,7 +60,7 @@
 				</div>
 				<div class="info">
 					<i class="fas fa-info"></i>
-					<p> Plus de 500 logements sont disponbles dans cette ville</p>
+					<p> Plus de 500 logements sont disponibles dans cette ville</p>
 				</div>
 			</section>
 		</header>
@@ -183,7 +183,8 @@
 					</div>
 					<div class="populaires-cartes">
 						<a class="populaires-item" href="#">
-							<img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
+							<img id="link-img"
+								src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
 								alt="soleil du matin">
 							<div class="populaires-contenu">
 								<h3>Hôtel Le soleil du matin</h3>
@@ -215,8 +216,7 @@
 							</div>
 						</a>
 						<a class="populaires-item" href="#">
-							<img id="link-img"
-								src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
+							<img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
 								alt="hotel bleu et blanc">
 							<div class="populaires-contenu">
 								<h3>Hôtel Tout bleu et Blanc</h3>
@@ -239,43 +239,41 @@
 			<section class="activites-marseille">
 				<h2 id="activites-a-marseille">Activités à Marseille</h2>
 				<div class="activites-marseille-cartes">
-					<a class="activites-marseille-item" href="#">
+					<a class="activites-marseille-port" href="#">
 						<img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="vieux port">
 						<h3>Vieux port</h3>
 					</a>
-					<div class="pomegues-frioul">
-						<a class="activites-marseille-pomegues" href="#">
-							<img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
-								alt="fort de pomegues">
-							<h3>Fort de Pomègues</h3>
-						</a>
 
-						<a class="activites-marseille-frioul" href="#">
-							<img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
-								alt="iles du frioul">
-							<h3>Îles du Frioul</h3>
-						</a>
-					</div>
+					<a class="activites-marseille-pomegues" href="#">
+						<img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
+							alt="fort de pomegues">
+						<h3>Fort de Pomègues</h3>
+					</a>
+
+					<a class="activites-marseille-frioul" href="#">
+						<img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="iles du frioul">
+						<h3>Îles du Frioul</h3>
+					</a>
 
 
-					<a class="activites-marseille-item" href="#"><img
-							src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
+
+					<a class="activites-marseille-calanques" href="#">
+						<img src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
 							alt="parc des calanques">
 						<h3>Parc National des Calanques</h3>
 					</a>
 
-					<div class="activites-marseille-link">
-						<a class="activites-marseille-style" href="#">
-							<img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg"
-								alt="dame de la garde">
-							<h3>Notre-Dame-de-la-Garde</h3>
-						</a>
-						<a class="activites-marseille-style" href="#">
-							<img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
-								alt="parc longchamp">
-							<h3>Parc Longchamp</h3>
-						</a>
-					</div>
+
+					<a class="activites-marseille-dame-garde" href="#">
+						<img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg"
+							alt="dame de la garde">
+						<h3>Notre-Dame-de-la-Garde</h3>
+					</a>
+					<a class="activites-marseille-longchamp" href="#">
+						<img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="parc longchamp">
+						<h3>Parc Longchamp</h3>
+					</a>
+
 
 				</div>
 			</section>
