MEDIA SCREEN css

--- a/Reservia.html
+++ b/Reservia.html
@@ -144,7 +144,7 @@
 							<img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
 								alt="auberge le panier">
 							<div class="hebergements-marseille-contenu">
-								<h3>Auberge le Panier</h3>
+								<h3>Auberge Le Panier</h3>
 								<p>Nuit à partir de <strong>23€</strong></p>
 								<div class="notation">
 									<i class="fas fa-star"></i>
