--- a/Reservia.html
+++ b/Reservia.html
@@ -36,6 +36,9 @@
 					<i class="fas fa-map-marker-alt"></i>
 					<input type="text" placeholder="Marseille, France">
 					<button type="button">Rechercher</button>
+					<div class= "search-icone">
+						<i class="fas fa-search"></i>
+					</div>
 				</form>
 				<div class="filtres">
 					<h2>Filtres</h2>
