modification problem nav

--- a/Reservia.html
+++ b/Reservia.html
@@ -35,8 +35,10 @@
 				<form class="formulaire" action="#">
 					<i class="fas fa-map-marker-alt"></i>
 					<input type="text" placeholder="Marseille, France">
-					<button type="button">Rechercher</button>
-					<div class= "search-icone">
+					<div class="button-rechercher">
+						<button type="button">Rechercher</button>
+					</div>
+					<div class="search-icon">
 						<i class="fas fa-search"></i>
 					</div>
 				</form>
