media screen tablettes

--- a/Reservia.html
+++ b/Reservia.html
@@ -33,11 +33,11 @@
 					<p>En plein centre ville ou en pleine nature</p>
 				</div>
 				<form class="formulaire" action="#">
-					<i class="fas fa-map-marker-alt"></i>
+					<div class= "location-icon">
+					     <i class="fas fa-map-marker-alt"></i>
+				    </div>
 					<input type="text" placeholder="Marseille, France">
-					<div class="button-rechercher">
-						<button type="button">Rechercher</button>
-					</div>
+					<button type="button">Rechercher</button>
 					<div class="search-icon">
 						<i class="fas fa-search"></i>
 					</div>
@@ -221,7 +221,7 @@
 							</div>
 						</a>
 						<a class="populaires-item" href="#">
-							<img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
+							<img id="bleu-blanc" src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
 								alt="hotel bleu et blanc">
 							<div class="populaires-contenu">
 								<h3>Hôtel Tout bleu et Blanc</h3>
