fin problem nav iphone

--- a/Reservia.html
+++ b/Reservia.html
@@ -21,8 +21,8 @@
 					<img src="images/logo/Reservia.svg" alt="logo-reservia" />
 				</a>
 				<ul>
-					<li><a class="link-nav" href="#hebergements-a-marseille"> Hébergements </a></li>
-					<li><a class="link-nav" href="#activites-a-marseille">Activités</a></li>
+					<li><a class="link-hebergements" href="#hebergements-a-marseille"> Hébergements </a></li>
+					<li><a class="link-activites" href="#activites-a-marseille">Activités</a></li>
 					<li><a class="subscribe" href="#"><strong>S'inscrire</strong></a></li>
 				</ul>
 			</nav>
