--- a/Reservia.html
+++ b/Reservia.html
@@ -33,9 +33,9 @@
 					<p>En plein centre ville ou en pleine nature</p>
 				</div>
 				<form class="formulaire" action="#">
-					<div class= "location-icon">
-					     <i class="fas fa-map-marker-alt"></i>
-				    </div>
+					<div class="location-icon">
+						<i class="fas fa-map-marker-alt"></i>
+					</div>
 					<input type="text" placeholder="Marseille, France">
 					<button type="button">Rechercher</button>
 					<div class="search-icon">
@@ -221,7 +221,8 @@
 							</div>
 						</a>
 						<a class="populaires-item" href="#">
-							<img id="bleu-blanc" src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
+							<img id="bleu-blanc"
+								src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
 								alt="hotel bleu et blanc">
 							<div class="populaires-contenu">
 								<h3>Hôtel Tout bleu et Blanc</h3>
